2010-12-24  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Return an empty string instead of 'application/octet-stream' in getMIMETypeForExtension()
        https://bugs.webkit.org/show_bug.cgi?id=51457

        WebKit EFL can't play html5 audio because of wrong mime type checking.
        So, 'application/octet-stream' is changed with an empty string.

        * platform/efl/MIMETypeRegistryEfl.cpp:
        (WebCore::MIMETypeRegistry::getMIMETypeForExtension):
        Returns an empty string instead of application/octet-stream when it can't find proper mime type.

git-svn-id: svn://svn.chromium.org/blink/trunk@74625 bbb929c8-8fbe-4397-9dbb-9b2b20218538