third_party/WebKit/WebCore/platform/efl/MIMETypeRegistryEfl.cpp
@@ -81,7 +81,7 @@ String MIMETypeRegistry::getMIMETypeForExtension(const String &ext)
         ++e;
     }
 
-    return "application/octet-stream";
+    return String();
 }
 
 bool MIMETypeRegistry::isApplicationPluginMIMEType(const String&)
